<resources>
    <string name="app_name">Lesson1</string>
    <string name="i_am_button">Click me to see Edit Text Activity</string>
    <string name="edit_text">I am text y\'all can edit</string>
    <string name="image_button_content">Image Button Content</string>
    <string name="switch_on">Switch ON:</string>
    <string name="switch_off">Switch OFF:</string>
    <string name="check_box">Check Box</string>
</resources>