<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/hello_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello My First Layout!"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/i_am_button"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="Type Here"
        android:text="@string/edit_text"
        android:textSize="22sp"
        android:hint="@string/edit_text"
        android:ems="10"
        android:inputType="" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        app:srcCompat="@android:drawable/star_on"
        android:contentDescription="@string/image_button_content" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:switchMinWidth="56dp"
        android:text="@string/switch_on"
        android:checked="true"
        android:textOff="OFF"
        android:textOn="ON" />

    <CheckBox android:id="@+id/checkbox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_box"
        android:onClick="onCheckboxClicked"/>

    <CheckBox android:id="@+id/checkbox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_box"
        android:onClick="onCheckboxClicked"/>

    <ToggleButton
        android:id="@+id/toggle_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="Click to ON"
        android:textOn="Click to OFF"
        android:textColor="#F44336"
        android:textSize="20sp"
        android:drawableTop="@drawable/abc_vector_test"
        android:checked="true" />


</LinearLayout>